# tracker-zilla

./: AUTHORS  ChangeLog  FUTURE  Makefile  Makefile.am  NEWS  abstract-info.vala  autogen.sh  configure.ac  linked-info.vala
data/: tracker-zilla.ui
src/: abstract-info.vala  data-source.vala  linked-info.vala  linking-info.vala  main-window.vala  main.vala  navigation-bar.vala  prefix-registry.vala  property-info.vala  search-bar.vala
vapi/: config.vapi
